fix(prejoin) fix incorrect alignment of alternative join options
remove styles that break the inline dialog's position management

--- a/css/premeeting/_prejoin.scss
+++ b/css/premeeting/_prejoin.scss
@@ -21,7 +21,6 @@
 .prejoin-preview {
     &-dropdown-btns {
         padding: 8px 0;
-        width: calc(100% - 48px);
     }
   
     &-dropdown-btn {
@@ -59,8 +58,6 @@
             background: #fff;
             padding: 0;
             position: absolute !important;
-            top: 48px !important;
-            transform: none !important;
             width: 100%;
         }
     }
